objects/EliteAssociation__c.object
<CustomObject><fields>
        <fullName>EliteGroup__c</fullName>
        <description>精英集团</description>
        <label>精英集团</label>
        <referenceTo>Elite__c</referenceTo>
        <relationshipLabel>EliteAssociations</relationshipLabel>
        <relationshipName>EliteAssociations_Group</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>EliteName__c</fullName>
        <description>精英成员</description>
        <label>精英</label>
        <referenceTo>IndividualElite__c</referenceTo>
        <relationshipLabel>EliteAssociations</relationshipLabel>
        <relationshipName>EliteAssociations_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>EndDate__c</fullName>
        <description>End Date</description>
        <label>终止日</label>
        <type>Date</type>
    </fields><fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date</description>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>起始日</label>
        <type>Date</type>
    </fields><fields>
        <fullName>TerminateReason__c</fullName>
        <description>TerminateReason
会员终止原因</description>
        <inlineHelpText>TerminateReason
会员终止原因</inlineHelpText>
        <label>终止原因</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>membership terminated due to 1) dicipline or 2) death</description>
        <label>终止</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>isBackupMember__c</fullName>
        <defaultValue>false</defaultValue>
        <description>是否候补委员？</description>
        <inlineHelpText>是否候补委员？</inlineHelpText>
        <label>候补委员</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>promotedMember__c</fullName>
        <defaultValue>false</defaultValue>
        <description>是否递补委员</description>
        <inlineHelpText>是否递补委员</inlineHelpText>
        <label>递补委员</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>promotedStartDate__c</fullName>
        <description>递补日</description>
        <inlineHelpText>递补日</inlineHelpText>
        <label>递补日</label>
        <type>Date</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>精英集团成员</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>集团成员</label><nameField>
        <displayFormat>第 {0000}名</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>集团成员</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>EndDate_Is_Required_IF_terminated</fullName>
        <active>true</active>
        <errorConditionFormula>Terminated__c &amp;&amp;    ISNULL( EndDate__c )</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>EndDate is required when terminated
请填写终止日</errorMessage>
    </validationRules><validationRules>
        <fullName>Terminate_Reason_Required_IF_terminated</fullName>
        <active>true</active>
        <errorConditionFormula>Terminated__c &amp;&amp;  ( LEN( TerminateReason__c ) == 0 )</errorConditionFormula>
        <errorDisplayField>Terminated__c</errorDisplayField>
        <errorMessage>Terminate Reason are required when member is terminated. 
请填写：终止原因</errorMessage>
    </validationRules></CustomObject>